fixed issue where hits where always visible on amazon s3 but not on local machine

--- a/app/src/components/elements/Hint/style.css
+++ b/app/src/components/elements/Hint/style.css
@@ -1,6 +1,6 @@
-.show {
+.showHint {
   display: inline;
 }
-.hide {
+.hideHint {
   display: none;
 }
